# $Id: Makefile.am,v 1.1 2005/07/24 12:18:25 luis Exp $
# AUTHOR: Luis Colorado <lc@luiscoloradosistemas.com>
# DATE: dom jul 24 13:14:57 CEST 2005

noinst_PROGRAMS = prulists

prulists_SOURCES = prulists.c lists.h

include_HEADERS = lists.h


# $Id: Makefile.am,v 1.1 2005/07/24 12:18:25 luis Exp $
