# $Id: configure.ac,v 1.2 2005/08/18 09:38:12 luis Exp $
# AUTHOR: Luis Colorado <lc@luiscoloradosistemas.com>
# DATE: dom jul 24 13:45:28 CEST 2005

AC_INIT(lists, 0.2)

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AC_PROG_CC
AC_PROG_INSTALL
AC_OUTPUT(Makefile lists.h)


# $Id: configure.ac,v 1.2 2005/08/18 09:38:12 luis Exp $
