# $Id: configure.ac,v 1.3 2005/08/24 07:16:18 luis Exp $
# AUTHOR: Luis Colorado <lc@luiscoloradosistemas.com>
# DATE: dom jul 24 13:45:28 CEST 2005

AC_INIT(lists, 0.3)

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AC_PROG_CC
AC_PROG_INSTALL
AC_OUTPUT(Makefile lists.h)


# $Id: configure.ac,v 1.3 2005/08/24 07:16:18 luis Exp $
