# $Id: configure.ac,v 1.5 2014/09/22 16:07:51 luis Exp $
# AUTHOR: Luis Colorado <lc@luiscoloradosistemas.com>
# DATE: dom jul 24 13:45:28 CEST 2005

AC_INIT(lists, 1.0, luiscoloradourcola@gmail.com)

AM_INIT_AUTOMAKE([foreign -Wall])

AC_PROG_CC

AC_PROG_INSTALL

AC_OUTPUT(Makefile lists.h)

# $Id: configure.ac,v 1.5 2014/09/22 16:07:51 luis Exp $
